--- a/src/scss/base/header.scss
+++ b/src/scss/base/header.scss
@@ -92,6 +92,7 @@
       padding-top: 1.5rem;
 
       @media (max-width: 49em) {
+        padding: 0 1rem;
         padding-top: 1.4rem;
 
         justify-content: space-between;
@@ -279,7 +280,11 @@
     }
 
     @media (max-width: 49em) {
-      display: none;
+      position: static;
+      margin-left: auto;
+      margin-right: 1.5rem;
+      margin-top: 1.5rem;
+      transform: none;
     }
   }
 
