--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -66,3 +66,4 @@ html:not(._page-loaded) {
 @import 'sections/article';
 @import 'sections/other';
 @import 'sections/achievements';
+@import 'sections/error-page';
