--- a/src/scss/sections/gallery.scss
+++ b/src/scss/sections/gallery.scss
@@ -125,7 +125,9 @@
     height: 100%;
 
     object-fit: cover;
-    object-position: top;
+    @media (min-width: 64.01em) {
+      object-position: left 28%;
+    }
   }
 
   // .gallery__row
