--- a/src/scss/sections/gallery.scss
+++ b/src/scss/sections/gallery.scss
@@ -72,23 +72,7 @@
       margin-bottom: 3.5dvh;
     }
     .gallery__slide-btn {
-      position: absolute;
-      z-index: 2;
-      width: 14rem;
-      height: 100%;
-      top: 0;
-
-      @media (max-width: 64em) {
-        width: 19rem;
-      }
-
-      &_prev {
-        left: 0;
-      }
-
-      &_next {
-        right: 0;
-      }
+      display: none;
     }
 
     &.swiper {
