--- a/src/scss/sections/media.scss
+++ b/src/scss/sections/media.scss
@@ -14,6 +14,7 @@
 
     &__content {
       min-height: 34.9rem;
+      width: 100%;
 
       @media (max-width: 49em) {
         min-height: 34.6rem;
@@ -27,7 +28,7 @@
 
       position: absolute;
 
-      width: 73.6rem;
+      width: 100%;
       height: 93.1rem;
 
       background: linear-gradient(
@@ -37,10 +38,11 @@
       );
       mix-blend-mode: normal;
 
-      transform: translate(-12rem, -24rem);
+      transform: translate(0, -24rem);
 
       @media (max-width: 49em) {
-        width: 100%;
+        bottom: -98%;
+        top: auto;
         transform: none;
       }
     }
@@ -257,6 +259,19 @@
         rgba(0, 0, 0, 0) 44.36%,
         rgba(0, 0, 0, 0.7) 51.53%
       );
+
+      @media (max-width: 49em) {
+        height: 100%;
+        bottom: -31%;
+        top: auto;
+        background: linear-gradient(
+          180deg,
+          rgba(0, 0, 0, 0) 14.92%,
+          #000000 66.88%
+        );
+        mix-blend-mode: normal;
+        transform: none;
+      }
     }
   }
 
