--- a/src/scss/sections/news-section.scss
+++ b/src/scss/sections/news-section.scss
@@ -309,6 +309,10 @@
     min-width: 30.1rem;
     height: 5.8rem;
 
+    &__txt-sm {
+      display: none;
+    }
+
     @media (max-width: 49em) {
       min-width: 82.1rem;
       height: 10.8rem;
