--- a/src/scss/common/menu.scss
+++ b/src/scss/common/menu.scss
@@ -32,6 +32,19 @@
     border-radius: 0.8rem;
   }
 
+  // .menu__lang
+
+  &__lang {
+    position: absolute;
+
+    top: 2rem;
+    left: 2.2rem;
+
+    @media (min-width: 49.01em) {
+      display: none;
+    }
+  }
+
   // .menu__inner
 
   &__inner {
@@ -53,7 +66,7 @@
     }
 
     @media (max-width: 49em) {
-      padding: 0 0 1.4rem 1.4rem;
+      padding: 2rem 0 1.4rem 1.4rem;
 
       row-gap: 1.9rem;
       width: 100%;
@@ -145,5 +158,47 @@
         font-size: var(--fz-130-hf);
       }
     }
+  }
+}
+
+.lang-menu {
+  display: flex;
+  column-gap: 3rem;
+
+  // .lang-menu__item
+
+  &__item {
+    position: relative;
+
+    &._is-hidden {
+      display: none;
+    }
+  }
+
+  // .lang-menu__input
+
+  &__input {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    appearance: none;
+  }
+
+  // .lang-menu__txt
+
+  &__txt {
+    padding: 0 1.2rem;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    height: 4.6rem;
+    color: var(--c-primary);
+    text-transform: uppercase;
+    border-radius: 0.8rem;
+    font-size: 2rem;
+    line-height: 1;
+    background-color: var(--c-bg);
   }
 }
