--- a/src/scss/sections/contacts.scss
+++ b/src/scss/sections/contacts.scss
@@ -117,20 +117,14 @@
   &__form {
     display: flex;
     flex-direction: column;
-    row-gap: 8vh;
-
+    row-gap: 1.5dvh;
     @media (max-width: 48em) {
       row-gap: 11.6rem;
     }
     @media (max-width: 450px) and (max-height: 850px) {
       row-gap: 4.6rem;
     }
-    @media (min-width: 48.01em) {
-      ._small-screen &,
-      ._hf & {
-        row-gap: 4.3vh;
-      }
-    }
+
     @media (max-width: 64em) and (min-width: 49.01em) {
       row-gap: 2vh;
 
@@ -196,6 +190,7 @@
   // .contacts__form-btn
 
   &__form-btn {
+    padding: 0 2rem;
     align-self: center;
   }
 }
