--- a/src/scss/sections/gallery.scss
+++ b/src/scss/sections/gallery.scss
@@ -119,7 +119,6 @@
   &__row {
     margin-bottom: auto;
     display: flex;
-    justify-content: space-between;
     align-items: center;
     transform: translateY(2.5rem);
 
@@ -130,69 +129,63 @@
     }
 
     @media (max-width: 49em) {
-      flex-direction: column;
-      align-items: flex-start;
+      display: grid;
+      align-items: start;
+      grid-template-columns: 1fr auto;
       row-gap: 3.2rem;
       transform: translateY(-2.5dvh);
 
       .link {
         font-size: 3.4rem;
+        column-gap: 5rem;
+        justify-content: space-between;
       }
     }
+  }
 
-    .link {
-      &:first-child {
-        column-gap: 1.8rem;
+  &__go-back {
+    position: relative;
+    @media (max-width: 49em) {
+      grid-row: span 2;
+    }
+    &.link {
+      margin-right: 4rem;
+      &::after {
+        content: '|';
 
-        @media (max-width: 64em) and (min-width: 49.01em) {
-          transform: translate(-0.2rem, -1rem);
-          column-gap: 4.8rem;
-        }
-
-        @media (max-width: 49em) {
-          column-gap: 8rem;
-
-          &::after {
-            flex: 0 0 2rem;
-            width: 2rem;
-          }
-        }
-
-        &::after {
-          content: var(--i-arr-sm);
-
-          flex: 0 0 1rem;
-          width: 1rem;
-        }
-      }
-      &:nth-child(2) {
-        column-gap: 4.8rem;
-
-        transform: translate(0.7rem, -1rem);
-
-        @media (min-width: 64.01em) {
-          padding-right: 0.5rem;
-        }
-
-        @media (max-width: 64em) and (min-width: 49.01em) {
-          column-gap: 7.2rem;
-          &::after {
-            transform: rotate(90deg) translate(-0.1rem, 0.3rem);
-          }
-        }
+        position: absolute;
+        top: 50%;
+        right: -2rem;
+        transform: translate(80%, -50%);
 
         @media (max-width: 49em) {
-          column-gap: 11rem;
-
-          transform: none;
+          content: none;
         }
       }
+    }
+  }
+
+  &__save {
+    &.link {
+      column-gap: 5rem;
     }
   }
 
   // .gallery__share
 
   &__share {
+    margin-right: auto;
+    &.link {
+      column-gap: 2rem;
+
+      &::after {
+        content: var(--i-arr-sm);
+      }
+
+      @media (min-width: 64.01em) {
+        padding-right: 0.5rem;
+      }
+    }
   }
 
   // .gallery__save
@@ -249,7 +242,7 @@
     height: 12.5dvh;
 
     @media (max-width: 64em) and (min-width: 49.01em) {
-      padding-bottom: 6dvh;
+      padding-bottom: 3dvh;
       height: 17.5dvh;
       transform: translateX(1rem);
     }
