--- a/src/scss/sections/links.scss
+++ b/src/scss/sections/links.scss
@@ -162,8 +162,6 @@
     row-gap: 4rem;
 
     &_social {
-      row-gap: 2.2rem;
-
       @media (max-width: 49em) {
         row-gap: 3.2rem;
       }
@@ -175,13 +173,17 @@
       }
 
       &_social {
-        row-gap: 2.8rem;
+        row-gap: 2.2rem;
       }
     }
 
     @media (max-width: 64em) and (min-width: 49.01em) {
       &:not(&_social) {
         row-gap: 4.8rem;
+      }
+
+      &_social {
+        row-gap: 3.5rem;
       }
 
       &:nth-child(2) {
@@ -194,6 +196,12 @@
         justify-self: end;
         min-width: 28rem;
       }
+    }
+  }
+
+  &__socials-sublist-item-txt {
+    @media (max-width: 49em) {
+      text-transform: uppercase;
     }
   }
 
@@ -218,6 +226,14 @@
     flex-direction: column;
     align-items: flex-start;
     row-gap: 2.8rem;
+
+    .links__item_social & {
+      row-gap: 1.2rem;
+
+      @media (max-width: 64em) and (min-width: 49.01em) {
+        row-gap: 0.5rem;
+      }
+    }
   }
 
   // .links__socials
@@ -225,18 +241,21 @@
   &__socials {
     display: grid;
     grid-template-columns: repeat(4, 3.7rem);
-    gap: 1.2rem;
+    gap: 0.8rem;
 
     @media (max-width: 49em) {
-      margin: 0 -2rem;
-      margin-bottom: -2rem;
-
-      grid-template-columns: repeat(4, 9rem);
-      gap: 1rem 4rem;
+      grid-template-columns: repeat(4, 7rem);
+      gap: 1.2rem;
     }
 
     @media (max-width: 64em) and (min-width: 49.01em) {
       grid-template-columns: repeat(4, 4.7rem);
+    }
+
+    &_exp {
+      display: flex;
+      flex-direction: column;
+      gap: 0.2rem;
     }
   }
 
@@ -244,6 +263,44 @@
 
   &__socials-item {
     display: inline-flex;
+
+    .links__socials_exp & {
+      display: inline-flex;
+      column-gap: 1.8rem;
+      align-items: center;
+
+      @media (max-width: 49em) {
+        column-gap: 3rem;
+      }
+    }
+  }
+
+  &__socials-sublist {
+    display: flex;
+    align-items: center;
+    column-gap: 2.8rem;
+
+    @media (max-width: 49em) {
+      column-gap: 4rem;
+    }
+  }
+
+  &__socials-sublist-item {
+    &:not(:last-child) {
+      position: relative;
+      white-space: nowrap;
+      &::after {
+        content: '|';
+        position: absolute;
+        top: 50%;
+        right: -1.4rem;
+        transform: translate(100%, -50%);
+
+        @media (max-width: 49em) {
+          right: -2rem;
+        }
+      }
+    }
   }
 
   // .links__socials-item-inner
@@ -252,17 +309,20 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    width: 3.7rem;
-    height: 3.7rem;
+    flex: 0 0 3.2rem;
+    width: 3.2rem;
+    height: 3.2rem;
 
     @media (max-width: 49em) {
-      width: 8rem;
-      height: 7.7rem;
+      flex: 0 0 7rem;
+      width: 7rem;
+      height: 7rem;
     }
 
     @media (max-width: 64em) and (min-width: 49.01em) {
-      width: 4.7rem;
-      height: 4.7rem;
+      flex: 0 0 4rem;
+      width: 4rem;
+      height: 3.5rem;
     }
 
     svg {
