--- a/src/scss/sections/contacts.scss
+++ b/src/scss/sections/contacts.scss
@@ -1,6 +1,11 @@
 .contacts {
   min-height: 100dvh;
 
+  .form-txt {
+    text-align: center;
+    text-transform: uppercase;
+  }
+
   @media (max-width: 48em) {
     padding-bottom: 24rem;
   }
@@ -115,9 +120,34 @@
   // .contacts__form
 
   &__form {
+    position: relative;
     display: flex;
     flex-direction: column;
     row-gap: 1.5dvh;
+    &::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 92%;
+      top: 0;
+      left: 0;
+      background-color: #000000;
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 0.4s ease-in-out, visibility 0.4s ease-in-out;
+      @media (max-width: 49em) {
+        height: 90%;
+      }
+    }
+    &._form-sent {
+      &::after {
+        opacity: 0.3;
+        visibility: visible;
+      }
+      .contacts__form-btn {
+        display: none;
+      }
+    }
     @media (max-width: 48em) {
       row-gap: 11.6rem;
     }
