--- a/src/scss/base/vars.scss
+++ b/src/scss/base/vars.scss
@@ -7,8 +7,7 @@
   // font family
   --ff-main: "Suisse Int'l";
   --ff-heading: 'Heading Now';
-  --ff-mono: 'Aeonik Mono';
-  --ff-mono: 'Aeonik Mono';
+  --ff-mono: 'Inter';
   --ff-numeric: 'Druk Text Cyr';
 
   // font size
