--- a/src/scss/common/homepage-table.scss
+++ b/src/scss/common/homepage-table.scss
@@ -432,10 +432,14 @@
 
   &__txt {
     color: rgba(0, 0, 0, 0.4);
-    font-family: 'Aeonik Mono';
+    font-family: 'Inter';
+    font-weight: 500;
+    letter-spacing: 0.03rem;
+    word-spacing: 0.13rem;
 
     @media (max-width: 49em) {
       font-size: var(--fz-13-hf);
+      word-spacing: 0.45rem;
     }
   }
 
