--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,9 @@
 
 // ---------------------------------- fonts ---------------------------------
 
+// google fonts
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 // local fonts
 @import 'base/fonts';
 
