--- a/src/scss/sections/gallery.scss
+++ b/src/scss/sections/gallery.scss
@@ -1,8 +1,8 @@
 .gallery {
-  &[data-section='media'] + .lower-info {
+  &[data-section="media"] + .lower-info {
     @media (max-width: 64em) {
       &::after {
-        content: '';
+        content: "";
 
         position: absolute;
         bottom: -3.5rem;
@@ -101,6 +101,10 @@
   &__image-wrap {
     display: flex;
     height: 100%;
+    picture {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   // .gallery__image
@@ -151,7 +155,7 @@
     &.link {
       margin-right: 4rem;
       &::after {
-        content: '|';
+        content: "|";
 
         position: absolute;
         top: 50%;
@@ -400,7 +404,7 @@
     }
   }
 }
-[data-page='gallery'] {
+[data-page="gallery"] {
   .header {
     &__logo {
       @media (max-width: 64em) and (min-width: 49.01em) {
