--- a/src/scss/common/menu.scss
+++ b/src/scss/common/menu.scss
@@ -19,7 +19,7 @@
   @media (max-width: 64em) and (min-width: 49.01em) {
     top: 1.2rem;
 
-    [data-page='schedule'] & {
+    [data-page="schedule"] & {
       top: 8.2rem;
     }
   }
@@ -143,7 +143,7 @@
       font: var(--txt-x);
       letter-spacing: 0.1rem;
       text-transform: uppercase;
-      line-height: 1;
+      line-height: 115%;
       display: inline-block;
       margin-top: -0.85rem;
       @media (max-width: 64em) and (min-width: 49.01em) {
