--- a/src/scss/sections/news-section.scss
+++ b/src/scss/sections/news-section.scss
@@ -5,13 +5,13 @@
   .controls__fraction {
     span:nth-child(1):not(:last-child) {
       &::after {
-        content: '//';
+        content: "//";
       }
     }
   }
   @media (max-width: 64em) {
     &::before {
-      content: '';
+      content: "";
       z-index: 3;
       left: 50%;
       position: fixed;
@@ -46,7 +46,7 @@
   }
   @media (max-width: 49em) {
     &::after {
-      content: '';
+      content: "";
 
       position: fixed;
       z-index: 2;
@@ -124,8 +124,6 @@
   // .news-section__filters
 
   &__filters {
-    transform: translateX(3.9rem);
-
     &.filters {
       margin-bottom: 0.4rem;
 
@@ -372,7 +370,7 @@
       width: 100%;
       height: 100%;
       &::after {
-        content: '';
+        content: "";
         position: absolute;
         top: 0;
         left: 0;
@@ -395,7 +393,7 @@
   &__btn {
   }
 }
-[data-page='news'] {
+[data-page="news"] {
   .container {
     @media (max-width: 49em) {
       padding-left: 0.8rem;
